overflow issue fixed?

--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -17,7 +17,9 @@
 }
 
 .App > * {
-  padding: 10px;
+  box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
   -webkit-box-flex: 1;
       -ms-flex: 1 100%;
           flex: 1 100%;
@@ -28,7 +30,8 @@
   visibility: visible;
   font-size: 2rem;
   line-height: 1;
-  margin: 1vh;
+  margin: 2vh;
+  /*border: 1px solid;*/
 }
 
 .hidden {
